feat: create users table, implements login logic
